--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,20 +2,40 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+ @layer base {
+  body {
+    color: #fff;
+    background-color: #000;
   }
 }
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-}
+@layer components {
+  .menuLink {
+    @apply cursor-pointer hover:text-[#ffffff];
+  }
+
+  .tags{
+    background-color: orangered;
+    margin-right: 0.5rem;
+    margin-top: 0.5rem;
+    padding: 3px 10px;
+    display: inline-block;
+    color: #fff;
+    font-size: 12px;  
+  }
+  .tags:last-child{
+    margin-right: 0;
+  }
+  .tags:nth-child(2){
+    background-color: green;
+  }
+  .tags:nth-child(3){
+    background-color: rgb(94, 163, 243)
+  }
+  .tags:nth-child(4){
+    background-color: rgb(94, 163, 243)
+  }
+  
+
+} 
+
